tests/spec/compile-pass/041_string_from_in_explicit_allocator.zn
// category: compile-pass
// profile: freestanding
// purpose: freestanding code can build owned String with an explicit allocator

module tests.pass.stringFromInExplicitAllocator;

import core.alloc.GlobalAllocator;

fn make(mut allocator: GlobalAllocator) -> String {
    return String.fromIn("hello", mut allocator);
}
