tests/spec/compile-fail/063_no_panic_rejects_oom_as_panic.zn
// category: compile-fail
// profile: hosted
// oom: panic
// purpose: noPanic rejects allocation APIs when the active profile maps OOM to panic

module tests.fail.noPanicRejectsOomAsPanic;

import alloc.string.String;

@noPanic
fn bad() -> String {
    return String.from("hello"); // expected-error: allocation failure would call panic in this profile
}
